[package]
name = "mmsolverlibs_cppbind"
version = "0.1.0"
authors = ["david-cattermole <cattermole91@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "mmsolverlibs"
path = "./src/lib.rs"
# NOTE: 'lib' is used to link with Rust crates, 'staticlib' is used to
# link with C++.
crate_type = ["staticlib"]

[dependencies.mmcore_cppbind]
path = "../cppbind/mmcore"

[dependencies.mmimage_cppbind]
path = "../cppbind/mmimage"

[dependencies.mmlens_cppbind]
path = "../cppbind/mmlens"

[dependencies.mmscenegraph_cppbind]
path = "../cppbind/mmscenegraph"

[profile.release]
opt-level = 3
rpath = false
lto = true
codegen-units = 1
