[package]
name = "mmsolverlibs_cppbind"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmsolverlibs_rust"
path = "./src/lib.rs"
# NOTE: 'lib' is used to link with Rust crates, 'staticlib' is used to
# link with C++.
crate_type = ["staticlib"]

[dependencies]
mmcore_cppbind = { workspace = true }
mmimage_cppbind = { workspace = true }
mmlens_cppbind = { workspace = true }
mmscenegraph_cppbind = { workspace = true }
