[workspace]
resolver = "2"
members = [
    "mmcore",
    "mmimage",
    "mmscenegraph",
]

[workspace.package]
version = "0.1.0"
authors = ["david-cattermole <cattermole91@gmail.com>"]
edition = "2018"
publish = false

[workspace.dependencies]
anyhow = "1.0.71"
approx = "0.5.1"
exr = "1.6.3"
fastapprox = "0.3.0"
log = "0.4.0"
num = "0.4.0"
num-traits = "0.2"
rustc-hash = "2.0.0"

[workspace.dependencies.shellexpand]
version = "3.1"
default-features = false
features = ["full"]

[workspace.dependencies.rand]
version = "0.8.5"
default-features = false
features = ["std", "alloc", "small_rng"]

[workspace.dependencies.petgraph]
version = "0.6"
default-features = false
features = ["stable_graph"]

[workspace.dependencies.nalgebra]
version = "0.32.2"
default-features = false
features = ["std", "matrixmultiply"]

[workspace.dependencies.criterion]
# This is used as a dev-dependency, not at runtime.
version = "0.5.1"
default-features = false
features = ["html_reports"]

[profile.release]
opt-level = 3
rpath = false
codegen-units = 1

# 'lto = true' Performs "fat" LTO which attempts to perform
# optimizations across all crates within the dependency graph.
lto = true

# NOTE: If we use 'panic = "abort"' then we are unable to produce tests.
# # https://github.com/rust-lang/cargo/issues/6313
#
# panic = "abort"
