[package]
name = "mmlens_cppbind"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmlens"
path = "./src/lib.rs"

[dependencies]
anyhow = { workspace = true }
cxx = { workspace = true }
num_cpus = { workspace = true }
paste = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
