[package]
name = "mmscenegraph_cppbind"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmscenegraph"
path = "./src/lib.rs"
# NOTE: 'lib' is used to link with Rust crates, 'staticlib' is used to
# link with C++.
# crate-type = ["rlib"]
# crate-type = ["staticlib"]

[dependencies]
cxx = { workspace = true }
mmscenegraph_rust = { workspace = true }
