[package]
name = "mmcore_rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmcore_rust"
path = "./src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
shellexpand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
