[package]
name = "mmimage_rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmimage_rust"
path = "./src/lib.rs"
crate_type = ["lib"]

[[bench]]
name = "bench"
harness = false

[dependencies]
log = { workspace = true }
exr = { workspace = true }
anyhow = { workspace = true }
num = { workspace = true }
