[package]
name = "mmimage_rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmimage_rust"
path = "./src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
exr = { workspace = true }
half = { workspace = true }
log = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
