[package]
name = "mmoptimise_rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmoptimise_rust"
path = "./src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
mmcore = { package = "mmcore_rust", path = "../mmcore" }
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
