[package]
name = "mmoptimise_rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmoptimise_rust"
path = "./src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
mmcore = { package = "mmcore_rust", path = "../mmcore" }
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
rayon = { workspace = true }

# Levenberg-Marquardt benchmarks
[[bench]]
name = "bench_lm_rosenbrock"
harness = false

[[bench]]
name = "bench_lm_extended_rosenbrock"
harness = false

[[bench]]
name = "bench_lm_powell"
harness = false

[[bench]]
name = "bench_lm_curve_fitting"
harness = false

[[bench]]
name = "bench_lm_bukin_n6"
harness = false

[[bench]]
name = "bench_lm_goldstein_price"
harness = false

# Powell Dog-Leg benchmarks
[[bench]]
name = "bench_pdl_rosenbrock"
harness = false

[[bench]]
name = "bench_pdl_extended_rosenbrock"
harness = false

[[bench]]
name = "bench_pdl_powell"
harness = false

[[bench]]
name = "bench_pdl_curve_fitting"
harness = false

[[bench]]
name = "bench_pdl_bukin_n6"
harness = false

[[bench]]
name = "bench_pdl_goldstein_price"
harness = false

# Gauss-Newton benchmarks
[[bench]]
name = "bench_gn_rosenbrock"
harness = false

[[bench]]
name = "bench_gn_extended_rosenbrock"
harness = false

[[bench]]
name = "bench_gn_powell"
harness = false

[[bench]]
name = "bench_gn_curve_fitting"
harness = false

[[bench]]
name = "bench_gn_bukin_n6"
harness = false

[[bench]]
name = "bench_gn_goldstein_price"
harness = false
