[package]
name = "mmoptimise_rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmoptimise_rust"
path = "./src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
mmcore = { package = "mmcore_rust", path = "../mmcore" }
nalgebra = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
rayon = { workspace = true }

# Benchmarks comparing all three solvers.
[[bench]]
name = "bench_rosenbrock"
harness = false

[[bench]]
name = "bench_extended_rosenbrock"
harness = false

[[bench]]
name = "bench_powell"
harness = false

[[bench]]
name = "bench_curve_fitting"
harness = false
