[package]
name = "mmscenegraph_rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmscenegraph_rust"
path = "./src/lib.rs"
crate-type = ["lib"]

[[bench]]
name = "bench"
harness = false

[dependencies]
approx = { workspace = true }
fastapprox = { workspace = true }
rustc-hash = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
petgraph = { workspace = true }
nalgebra = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
