[package]
name = "mmscenegraph_rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmscenegraph_rust"
path = "./src/lib.rs"
crate-type = ["lib"]

[[bench]]
name = "bench"
harness = false

[dependencies]
anyhow = { workspace = true }
approx = { workspace = true }
argmin = { workspace = true }
argmin-math = { workspace = true }
fastapprox = { workspace = true }
finitediff = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
num-traits = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
plotters = { workspace = true }
