[package]
name = "mmscenegraph_rust"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "mmscenegraph_rust"
path = "./src/lib.rs"
crate-type = ["lib"]

[[bench]]
name = "bench"
harness = false

[dependencies]
anyhow = { workspace = true }
approx = { workspace = true }
enum_dispatch = { workspace = true }
fastapprox = { workspace = true }
log = { workspace = true }
mmoptimise = { package = "mmoptimise_rust", path = "../mmoptimise" }
nalgebra = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
plotters = { workspace = true }
